syntax = "proto3";
option java_multiple_files = true;
package org.example.grpc;

message VetorSinal {
  repeated double vetorSinal = 1;
  double s = 2;
  double n = 3;
}

message ImagemProcessada {
  repeated double imagemProcessada = 1;
}

service ProcessamentoImagemService {
  rpc processarImagem(VetorSinal) returns (ImagemProcessada);
}